<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="loginText">login</string>
    <string name="EmailAddress">email</string>
    <string name="passwordText">password</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="Switch">What Does This Do?</string>
    <string name="dialog_message">Would you like to finish the activity?</string>
    <string name="dialog_title">FINISH ACTIVITY</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="ToastMessage">ListItemsActivity passed: My information to share</string>
    <string name="StartChat">Start Chat</string>
    <string name="chatButton">SEND</string>
</resources>
