<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.adam.androidlabs.ListItemsActivity"
    android:rowCount="2"
    android:columnCount="2"
    >
    <RadioButton
        android:text="@string/RadioButton"
        android:layout_columnWeight="1"
        android:gravity="fill"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:text="@string/CheckBox"
        android:layout_columnWeight="1"
        android:gravity="fill"
        />


    <Switch
        android:id="@+id/switchBtn"
        android:text="@string/Switch"
        android:layout_columnWeight="1"
        android:gravity="fill"
        />

    <ImageButton
        android:id="@+id/imageBtn"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_columnWeight="1"
        android:gravity="fill"
        />

</GridLayout>
